--- a/pom.xml
+++ b/pom.xml
@@ -15,17 +15,31 @@
         <version>2.2.1.RELEASE</version>
     </parent>
 
-    <dependencies>
-        <dependency>
+    <dependencies>	
+	<dependency>
+  	    <groupId>org.junit.jupiter</groupId>
+  	    <artifactId>junit-jupiter-api</artifactId>
+  	    <version>5.5.1</version>
+  	</dependency>
+
+         <dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter-engine</artifactId>
+	    <version>5.5.1</version>
+	</dependency>
+	
+	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
+	
+	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
+	
+	<dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
@@ -37,7 +51,18 @@
     </properties>
 
     <build>
-        <plugins>
+
+	<pluginManagement>
+    	  <plugins>
+    	    <plugin>
+    	      <groupId>org.apache.maven.plugins</groupId>
+       	   <artifactId>maven-surefire-plugin</artifactId>
+       	   <version>2.22.1</version>
+       	   </plugin>
+     	 </plugins>
+    	</pluginManagement>
+	
+	<plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -67,6 +92,5 @@
             <url>https://repo.spring.io/libs-release</url>
         </pluginRepository>
     </pluginRepositories>
-
 
 </project>
